// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`démarre la partie 1`] = `
Object {
  "joueurs": Array [
    "J1",
  ],
  "peutDemarrer": false,
  "phase": "EN_COURS",
  "scores": Array [
    Object {
      "cible": Object {
        "15": Object {
          "ferme": false,
          "touches": 0,
        },
        "16": Object {
          "ferme": false,
          "touches": 0,
        },
        "17": Object {
          "ferme": false,
          "touches": 0,
        },
        "18": Object {
          "ferme": false,
          "touches": 0,
        },
        "19": Object {
          "ferme": false,
          "touches": 0,
        },
        "20": Object {
          "ferme": false,
          "touches": 0,
        },
        "25": Object {
          "ferme": false,
          "touches": 0,
        },
      },
      "joueur": "J1",
      "points": 0,
    },
  ],
  "vainqueurs": Array [],
}
`;

exports[`inscrit des joueurs 1`] = `
Object {
  "joueurs": Array [
    "J1",
  ],
  "peutDemarrer": false,
  "phase": "INSCRIPTION",
  "scores": Array [
    Object {
      "cible": Object {
        "15": Object {
          "ferme": false,
          "touches": 0,
        },
        "16": Object {
          "ferme": false,
          "touches": 0,
        },
        "17": Object {
          "ferme": false,
          "touches": 0,
        },
        "18": Object {
          "ferme": false,
          "touches": 0,
        },
        "19": Object {
          "ferme": false,
          "touches": 0,
        },
        "20": Object {
          "ferme": false,
          "touches": 0,
        },
        "25": Object {
          "ferme": false,
          "touches": 0,
        },
      },
      "joueur": "J1",
      "points": 0,
    },
  ],
  "vainqueurs": Array [],
}
`;

exports[`inscrit des joueurs 2`] = `
Object {
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "peutDemarrer": true,
  "phase": "INSCRIPTION",
  "scores": Array [
    Object {
      "cible": Object {
        "15": Object {
          "ferme": false,
          "touches": 0,
        },
        "16": Object {
          "ferme": false,
          "touches": 0,
        },
        "17": Object {
          "ferme": false,
          "touches": 0,
        },
        "18": Object {
          "ferme": false,
          "touches": 0,
        },
        "19": Object {
          "ferme": false,
          "touches": 0,
        },
        "20": Object {
          "ferme": false,
          "touches": 0,
        },
        "25": Object {
          "ferme": false,
          "touches": 0,
        },
      },
      "joueur": "J1",
      "points": 0,
    },
    Object {
      "cible": Object {
        "15": Object {
          "ferme": false,
          "touches": 0,
        },
        "16": Object {
          "ferme": false,
          "touches": 0,
        },
        "17": Object {
          "ferme": false,
          "touches": 0,
        },
        "18": Object {
          "ferme": false,
          "touches": 0,
        },
        "19": Object {
          "ferme": false,
          "touches": 0,
        },
        "20": Object {
          "ferme": false,
          "touches": 0,
        },
        "25": Object {
          "ferme": false,
          "touches": 0,
        },
      },
      "joueur": "J2",
      "points": 0,
    },
  ],
  "vainqueurs": Array [],
}
`;

exports[`modifie le score sur un lancer de fléchette 1`] = `
Object {
  "joueurs": Array [
    "J1",
  ],
  "peutDemarrer": false,
  "phase": "INSCRIPTION",
  "scores": Array [
    Object {
      "cible": Object {
        "15": Object {
          "ferme": false,
          "touches": 0,
        },
        "16": Object {
          "ferme": false,
          "touches": 0,
        },
        "17": Object {
          "ferme": false,
          "touches": 0,
        },
        "18": Object {
          "ferme": false,
          "touches": 0,
        },
        "19": Object {
          "ferme": false,
          "touches": 0,
        },
        "20": Object {
          "ferme": false,
          "touches": 1,
        },
        "25": Object {
          "ferme": false,
          "touches": 0,
        },
      },
      "joueur": "J1",
      "points": 0,
    },
  ],
  "vainqueurs": Array [],
}
`;

exports[`recrée une nouvelle partie 1`] = `
Object {
  "joueurs": Array [],
  "peutDemarrer": false,
  "phase": "INSCRIPTION",
  "scores": Array [],
  "vainqueurs": Array [],
}
`;

exports[`retourne le state initial 1`] = `
Object {
  "joueurs": Array [],
  "peutDemarrer": false,
  "phase": "INSCRIPTION",
  "scores": Array [],
  "vainqueurs": Array [],
}
`;
